--- a/i3_hooked_on_a_feeling/.tmux.conf
+++ b/i3_hooked_on_a_feeling/.tmux.conf
@@ -15,7 +15,7 @@ set -g status-right-length 60
 set -g status-left-length 25
 set -g status-interval 1
 set -g status-left "#(~/dotfiles/scripts/dateandtime #{client_width})"
-set -g status-right "#(~/dotfiles/scripts/bar #{client_width})"
+set -g status-right "#(~/dotfiles/scripts/tmst #{client_width})"
 
 set -g default-terminal tmux
 set -g destroy-unattached
