--- a/i3_hooked_on_a_feeling/.tmux.conf
+++ b/i3_hooked_on_a_feeling/.tmux.conf
@@ -1,21 +1,59 @@
 bind r source-file ~/.tmux.conf
+run "bash ~/dotfiles_ikigai/scripts/blah/tmco.sh"
 set -g escape-time 0
 set -g window-status-current-format ""
+#set -g default-terminal "rxvt-unicode-256color"
+#set -ga terminal-overrides ",rxvt-unicode-256color:Tc"
+set -ga terminal-override ',rxvt-uni*:XT:Ms=\E]52;%p1%s;%p2%s\007'
 
 #set -g pane-border-status bottom
 #set -g pane-border-format ""
 #set -g pane-border-fg black
 #set -g pane-active-border-fg colour8 
 #set -g pane-active-border-bg colour8
+#if-shell '[ $(cat ~/curtheme) -eq "light" ]' \
+     'set -g status-bg colour1;set -g status-fg colour1' \
+     'set -g status-bg "#000000";set -g status-fg "#ffffff"'
 
-set -g status-justify left
-set -g status-bg "#000000"
+
+#myvar="#(xrdb -query | grep background | tail -n 1 | awk '{print $2}')"
+
+
+#if '[[ $(cat ~/curtheme) == "dark"  ]]' 'set -g status-bg "#000000"'
+#if '[[ $(cat ~/curtheme) == "dark"  ]]' 'set -g status-fg "#19FF19"'
+#if '[[ $(cat ~/curtheme) == "light"  ]]' 'set -g status-fg "#000000"'
+#if '[[ $(cat ~/curtheme) == light  ]]' 'set -g status-bg colour0'
+#set -g pane-border-fg colour0
+#set -g pane-active-border-fg colour0
+#set -g pane-active-border-bg colour0
+#set -g pane-active-border-bg "#f7f7f9"
+
+#set -g status-justify left
+#set -g status-bg "#000000"
 set -g status-fg "#19FF19"
 set -g status-right-length 60
-set -g status-left-length 25
+#set -g status-left-length 25
 set -g status-interval 1
-set -g status-left "#(~/dotfiles/scripts/dateandtime #{client_width})"
+#set -g status-left "#(~/dotfiles/scripts/dateandtime #{client_width})"
 set -g status-right "#(~/dotfiles/scripts/tmst #{client_width})"
+#set -g status-right $myvar 
+#
 
-set -g default-terminal tmux
+set -g status-left ""
+#set -g status-right ""
+#set -g default-terminal tmux
+#set -g default-terminal "screen-256"
 set -g destroy-unattached
+
+# Resize the current pane using Alt + direction
+bind -n M-k resize-pane -U 5
+bind -n M-j resize-pane -D 5
+bind -n M-h resize-pane -L 5
+bind -n M-l resize-pane -R 5
+#set -g mode-mouse on
+
+# maximize and minimize
+unbind +
+bind + new-window -d -n tmux-zoom \; swap-pane -s tmux-zoom.0 \; select-window -t tmux-zoom
+unbind -
+bind - last-window \; swap-pane -s tmux-zoom.0 \; kill-window -t tmux-zoom
