--- a/i3_hooked_on_a_feeling/.tmux.conf
+++ b/i3_hooked_on_a_feeling/.tmux.conf
@@ -7,8 +7,8 @@ set -g window-status-current-format ""
 set -g status-right-length 60
 set -g status-left-length 25
 set -g status-interval 1
-set -g status-left "#(~/dotfiles/scripts/dateandtime #{client_width})"
-set -g status-right "#(~/dotfiles/scripts/tmst #{client_width})"
+set -g status-left "#(~/dotfiles_ikigai/scripts/blah/dateandtime #{client_width})"
+set -g status-right "#(~/dotfiles_ikigai/scripts/blah/tmst #{client_width})"
 set -g default-terminal "screen-256color"
 set -g destroy-unattached
 
