--- a/i3_hooked_on_a_feeling/.config/rofi/config
+++ b/i3_hooked_on_a_feeling/.config/rofi/config
@@ -1,2 +1,2 @@
 # Dark theme.
-rofi.theme: ~/.cache/wal/colors-rofi-dark.rasi
+rofi.theme: ~/dotfiles_ikigai/i3_hooked_on_a_feeling/.colors/rofi/colors-rofi-dark.rasi
