--- a/.config/i3/config
+++ b/.config/i3/config
@@ -22,6 +22,7 @@
 
 set $mod Mod4
 set $term --no-startup-id urxvt
+set $lock betterlockscreen -l
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
@@ -43,10 +44,10 @@ floating_modifier $mod
 
 # start a terminal
 bindsym $mod+Return exec $term 
-bindsym $mod+Mod1+Return exec --no-startup-id urxvt; exec feh --bg-fill ~/Pictures/wallhaven-13117.jpg
+bindsym $mod+Mod1+Return exec $term; exec feh --bg-fill ~/Pictures/wallhaven-13117.jpg
 
 # kill focused window
-bindsym $mod+Shift+q kill
+bindsym $mod+Shift+a kill
 
 # start dmenu (a program launcher)
 bindsym $mod+d exec " dmenu_run -nf '#F3F4F5' -nb '#2F343F' -sb '#1793D1' -sf '#f3f4f5' -fn 'monospace-10' -p 'run:'"
@@ -65,8 +66,8 @@ bindsym Mod1+Tab exec rofi -show window -i -lines 10 -eh 1 -width 50 -padding 50
 # change focus
 bindsym $mod+j focus left
 bindsym $mod+k focus down
-#bindsym $mod++l focus up
-bindsym $mod+semicolon focus right
+bindsym $mod+l focus up
+bindsym $mod+m focus right
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Left focus left
@@ -78,7 +79,7 @@ bindsym $mod+Right focus right
 bindsym $mod+Shift+j move left
 bindsym $mod+Shift+k move down
 bindsym $mod+Shift+l move up
-bindsym $mod+Shift+semicolon move right
+bindsym $mod+Shift+m move right
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Shift+Left move left
@@ -109,35 +110,49 @@ bindsym $mod+space focus mode_toggle
 # focus the parent container
 bindsym $mod+a focus parent
 
+# Define names for default workspaces for which we configure key bindings later on.
+# We use variables to avoid repeating the names in multiple places.
+set $ws1 "1"
+set $ws2 "2: Browser"
+set $ws3 "3"
+set $ws4 "4"
+set $ws5 "5"
+set $ws6 "6"
+set $ws7 "7"
+set $ws8 "8"
+set $ws9 "9"
+set $ws10 "10: 🎷Music🎷"
+
 # switch to workspace
-bindsym $mod+1 workspace 1
-bindsym $mod+2 workspace 2
-bindsym $mod+3 workspace 3
-bindsym $mod+4 workspace 4
-bindsym $mod+5 workspace 5
-bindsym $mod+6 workspace 6
-bindsym $mod+7 workspace 7
-bindsym $mod+8 workspace 8
-bindsym $mod+9 workspace 9
-bindsym $mod+0 workspace 10
+bindsym $mod+ampersand workspace $ws1
+bindsym $mod+eacute workspace $ws2
+bindsym $mod+quotedbl workspace $ws3
+bindsym $mod+apostrophe workspace $ws4
+bindsym $mod+parenleft workspace $ws5
+bindsym $mod+minus workspace $ws6
+bindsym $mod+egrave workspace $ws7
+bindsym $mod+underscore workspace $ws8
+bindsym $mod+ccedilla workspace $ws9
+bindsym $mod+agrave workspace $ws10
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace 1
-bindsym $mod+Shift+2 move container to workspace 2
-bindsym $mod+Shift+3 move container to workspace 3
-bindsym $mod+Shift+4 move container to workspace 4
-bindsym $mod+Shift+5 move container to workspace 5
-bindsym $mod+Shift+6 move container to workspace 6
-bindsym $mod+Shift+7 move container to workspace 7
-bindsym $mod+Shift+8 move container to workspace 8
-bindsym $mod+Shift+9 move container to workspace 9
-bindsym $mod+Shift+0 move container to workspace 10
+bindsym $mod+Shift+ampersand move container to workspace $ws1
+bindsym $mod+Shift+eacute move container to workspace $ws2
+bindsym $mod+Shift+quotedbl move container to workspace $ws3
+bindsym $mod+Shift+apostrophe move container to workspace $ws4
+bindsym $mod+Shift+5 move container to workspace $ws5
+bindsym $mod+Shift+minus move container to workspace $ws6
+bindsym $mod+Shift+egrave move container to workspace $ws7
+bindsym $mod+Shift+underscore move container to workspace $ws8
+bindsym $mod+Shift+ccedilla move container to workspace $ws9
+bindsym $mod+Shift+agrave move container to workspace $ws10
 
 bindsym $mod+Control+r exec ranger
 #;move container to workspaces 
-for_window [class="feh"] move container to workspace 4
-for_window [class="qbittorrent"] move container to workspace 4
-for_window [class="qutebrowser"] move container to workspace 2
+for_window [class="feh"] move container to workspace $ws4
+for_window [class="Spotify"] move container to workspace $ws10
+for_window [class="qbittorrent"] move container to workspace $ws4
+for_window [class="qutebrowser"] move container to workspace $ws2
 for_window [class="^.*"] border pixel 1 
 
 # reload the configuration file
@@ -173,6 +188,20 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
+set $mode_system System (l) lock, (e) logout, (s) suspend, (h) hibernate, (r) reboot, (Shift+s) shutdown
+mode "$mode_system" {
+    bindsym l exec --no-startup-id i3exit lock, mode "default"
+    bindsym e exec --no-startup-id i3exit logout, mode "default"
+    bindsym s exec --no-startup-id i3exit suspend, mode "default"
+    bindsym h exec --no-startup-id i3exit hibernate, mode "default"
+    bindsym r exec --no-startup-id i3exit reboot, mode "default"
+    bindsym Shift+s exec --no-startup-id i3exit shutdown, mode "default"
+
+    # back to normal: Enter or Escape
+    bindsym Return mode "default"
+    bindsym Escape mode "default"
+}
+bindsym $mod+Pause mode "$mode_system"
 
 # Color scheme
 set $bg-color 	         #1d1f21
@@ -208,15 +237,23 @@ bar {
 	}
 }
 
-# volume control
-bindsym XF86AudioRaiseVolume exec amixer -q set Master 2%+ unmute
-bindsym XF86AudioLowerVolume exec amixer -q set Master 2%- unmute
-bindsym XF86AudioMute exec amixer -q set Master toggle
+#change volume
+# Pulse Audio controls
+bindsym XF86AudioRaiseVolume exec --no-startup-id amixer -D pulse sset Master 3%+ 
+bindsym XF86AudioLowerVolume exec --no-startup-id amixer -D pulse sset Master 3%-
+bindsym XF86AudioMute exec amixer -q -D pulse sset Master toggle
+
+# music control
+bindsym XF86AudioNext exec mpc next
+bindsym XF86AudioPrev exec mpc prev
+bindsym XF86AudioPlay exec mpc toggle
+bindsym XF86AudioStop exec mpc stop
 
 
 # Sreen brightness controls
-bindsym XF86MonBrightnessUp exec xbacklight -inc 20 # increase screen brightness
-bindsym XF86MonBrightnessDown exec xbacklight -dec 20 # decrease screen brightness
+bindsym XF86MonBrightnessUp exec light -A 5 # increase screen brightness
+bindsym $mod+F4 exec light -A 5 # increase screen brightness
+bindsym $mod+F5 exec light -U 5 # decrease screen brightness
 
 # screenshot
 bindsym Print exec scrot '%S:%M:%H_%Y-%m-%d_$wx$h.png' -e 'mv $f ~/Pictures/Screenshots/'
@@ -237,13 +274,16 @@ gaps inner 20
 gaps outer 20
 
 # Change gaps dynamically
+
+bindsym $mod+Shift+t gaps inner current set 20; gaps outer current set 20
+bindsym $mod+i gaps inner current plus 5
+bindsym $mod+Shift+i gaps inner current minus 5
 bindsym $mod+Shift+d gaps inner current set 0; gaps outer current set 0
-bindsym $mod+Shift+t gaps inner current set 15; gaps outer current set 15
-bindsym $mod+bracketleft	gaps inner current plus 5
-bindsym $mod+bracketright	gaps inner current minus 5
+bindsym $mod+o gaps outer current plus 5
+bindsym $mod+Shift+o gaps outer current minus 5
 
 # custom keybinding to lockscreen, use --lock dim or --lock blur below for different backgrounds
-bindsym $mod+l exec --no-startup-id betterlockscreen -l
+bindsym Mod1+l exec --no-startup-id $lock
 
 # autostarted apps
 exec --no-startup-id compton --config ~/compton.conf -b
@@ -252,3 +292,21 @@ exec --no-startup-id mpd
 exec autocutsel
 # Autostart urxvt (or your default terminal) and output commands
 exec --no-startup-id ~/dotfiles_ikigai/scripts/init_workspace.sh
+
+exec --no-startup-id xsettingsd &
+#exec --no-startup-id compton -b
+# Set background image
+exec --no-startup-id nitrogen --restore
+
+# xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
+# screen before suspend. Use loginctl lock-session to lock your screen.
+exec --no-startup-id xss-lock --transfer-sleep-lock -- $lock --nofork
+
+# NetworkManager is the most popular way to manage wireless networks on Linux,
+# and nm-applet is a desktop environment-independent system tray GUI for it.
+exec --no-startup-id nm-applet
+
+exec --no-startup-id alsa
+
+# autolock screen after a while
+exec xautolock -time 5 -corners ---- -locker 'betterlockscreen -l' -notify 20 -notifier 'xset dpms force off' &
