Fixed sysinfo, init_workspace and more

--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -6,3 +6,7 @@ set preview_images true
 
 alias yp    shell bash ~/.config/ranger/ranger_shortcut_yp.sh 
 
+#-------------------------------------------
+# Documents
+#-------------------------------------------
+ext pdf, has evince,   X, flag f = evince -- "$@"
