--- a/.config/i3/config
+++ b/.config/i3/config
@@ -21,7 +21,7 @@
 #
 
 set $mod Mod4
-set $term --no-startup-id urxvt
+set $term --no-startup-id i3-sensible-terminal
 set $lock betterlockscreen -l
 
 # Font for window titles. Will also be used by the bar unless a different font
@@ -272,6 +272,11 @@ hide_edge_borders none
 # i3 gaps
 gaps inner 20 
 gaps outer 20
+
+# Gaps only if more than 1 container in workspace
+smart_gaps on
+
+smart_borders on
 
 # Change gaps dynamically
 
