--- a/.config/i3/config
+++ b/.config/i3/config
@@ -50,18 +50,18 @@ bindsym $mod+Mod1+Return exec $term; exec feh --bg-fill ~/Pictures/wallhaven-131
 bindsym $mod+Shift+a kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec " dmenu_run -nf '#F3F4F5' -nb '#2F343F' -sb '#1793D1' -sf '#f3f4f5' -fn 'monospace-10' -p 'run:'"
+bindsym $mod+d exec " dmenu_run -nf '#F3F4F5' -nb '#2F343F' -sb '#bf616a' -sf '#d8dee8' -fn 'monospace-10' -p 'run:'"
 
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
 
 # start rofi (dmenu mode)
-bindsym $mod+z exec i3-dmenu-desktop --dmenu='rofi -dmenu -i -lines 10 -eh 1 -width 30 -padding 50 -opacity "85" -font "Droid Sans 14"'  
+bindsym $mod+z exec i3-dmenu-desktop --dmenu='rofi -lines 12 -padding 18 -width 60 -location 0 -show drun -sidebar-mode -columns 3 -font "Droid Sans 10"'  
 
 # start rofi (window mode)
-bindsym $mod+Tab exec rofi -show window -i -lines 10 -eh 1 -width 50 -padding 50 -opacity "85" -font "Droid Sans 16"
-bindsym Mod1+Tab exec rofi -show window -i -lines 10 -eh 1 -width 50 -padding 50 -opacity "85" -font "Droid Sans 16"
+bindsym $mod+Tab exec rofi -show window -i -lines 10 -eh 1 -width 50 -padding 50 -opacity "85" -font "Droid Sans 12"
+bindsym Mod1+Tab exec rofi -show window -i -lines 10 -eh 1 -width 50 -padding 50 -opacity "85" -font "Droid Sans 12"
 
 # change focus
 bindsym $mod+j focus left
@@ -203,38 +203,20 @@ mode "$mode_system" {
 }
 bindsym $mod+Pause mode "$mode_system"
 
-# Color scheme
-set $bg-color 	         #1d1f21
-set $inactive-bg-color   #1d1f21
-set $text-color          #f5f5f5
-set $inactive-text-color #d0d0d0
-set $urgent-bg-color	 #ac4142
+bar {
+        colors {
+        background #2f343f
+        statusline #2f343f
+        separator #4b5262
 
-#                       border              background         text                 indicator
-client.focused          $bg-color           $bg-color          $urgent-bg-color		$urgent-bg-color
-client.unfocused        $iancative-bg-color $inactive-bg-color $inactive-text-color $urgent-bg-color
-client.focused_inactive $iancative-bg-color $inactive-bg-color $inactive-text-color $urgent-bg-color
-client.urgent           $urgent-bg-color    $urgent-bg-color   $text-color          $urgent-bg-color
-
-# Start i3bar 
-bar { 
-#status_command i3status
-	status_command exec .config/i3status/net-speed.sh
-	position bottom
-	mode dock
-	hidden_state show
-	tray_padding 6
-	#modifier $mod
-    strip_workspace_numbers yes 
-	colors {
-		background #000000
-		statusline #00A5FF #that neon blue
-	    separator #757575
-		#                  border             background         text
-		focused_workspace  $bg-color          #505050			 $text-color
-		inactive_workspace $inactive-bg-color $inactive-bg-color $inactive-text-color
-		urgent_workspace   $urgent-bg-color   $urgent-bg-color   $text-color
-	}
+        # colour of border, background, and text
+        focused_workspace       #2f343f #bf616a #d8dee8
+        active_workspace        #2f343f #2f343f #d8dee8
+        inactive_workspace      #2f343f #2f343f #d8dee8
+        urgent_workspace        #2f343f #ebcb8b #2f343f
+    }
+    strip_workspace_numbers yes
+    status_command exec .config/i3status/net-speed.sh
 }
 
 #change volume
@@ -314,4 +296,6 @@ exec --no-startup-id nm-applet
 exec --no-startup-id alsa
 
 # autolock screen after a while
-exec xautolock -time 5 -corners ---- -locker 'betterlockscreen -l' -notify 20 -notifier 'xset dpms force off' &
+exec --no-startup-id xautolock -time 5 -corners ---- -locker 'betterlockscreen -l' -notify 20 -notifier 'xset dpms force off' &
+
+exec --no-startup-id spotify 
