--- a/.config/i3/config
+++ b/.config/i3/config
@@ -22,7 +22,7 @@
 
 set $mod Mod4
 set $term --no-startup-id i3-sensible-terminal
-set $browser --no-startup-id qutebrowser
+set $browser --no-startup-id chromium
 set $lock betterlockscreen -l
 
 # Font for window titles. Will also be used by the bar unless a different font
