--- a/.config/gtk-2.0/gtkfilechooser.ini
+++ b/.config/gtk-2.0/gtkfilechooser.ini
@@ -2,10 +2,10 @@
 LocationMode=path-bar
 ShowHidden=true
 ShowSizeColumn=true
-GeometryX=1080
+GeometryX=540
 GeometryY=215
 GeometryWidth=840
 GeometryHeight=630
-SortColumn=name
-SortOrder=ascending
+SortColumn=modified
+SortOrder=descending
 StartupMode=recent
