--- a/.config/i3status/config
+++ b/.config/i3status/config
@@ -1,63 +1,76 @@
 # i3status configuration file.
 # see "man i3status" for documentation.
 
-# It is important that this file is edited as UTF-8.
-# The following line should contain a sharp s:
-# ß
-# If the above line is not correctly displayed, fix your editor first!
-
 general {
-        colors = true
-	    output_format = i3bar
-        interval = 1
+        output_format = "i3bar"
+        colors = false
+        markup = pango
+        interval = 5
+        color_good = '#2f343f'
+		color_degraded = '#ebcb8b'
+		color_bad = '#ba5e57'
 }
 
-order += "ipv6"
-order += "disk /"
-order += "wireless _first_"
-order += "ethernet _first_"
-order += "volume master"
-order += "battery 0"
 order += "load"
+# i3status configuration file.
+# see "man i3status" for documentation.
+order += "cpu_temperature 0"
+order += "disk /"
+order += "disk /home"
+order += "ethernet _first_"
+order += "wireless _first_"
+order += "volume master"
+#order += "battery all"
 order += "tztime local"
 
-
-volume master {
-        format = "♪: %volume"
-        format_muted = "♪: muted (%volume)"
-        device = "pulse:alsa_output.pci-0000_00_1f.3.analog-stereo"
+load {
+        format = "<span background='#f59335'> ⌁%5min Load </span>"
 }
 
-wireless _first_ {
-        format_up = "W: (%quality at %essid, %bitrate / %frequency) %ip"
-        format_down = "W: down"
+cpu_temperature 0 {
+        format = "<span background='#bf616a'> 🔥%degrees °C </span>"
+        path = "/sys/devices/pci0000:00/0000:00:18.3/hwmon/hwmon1/temp1_input" # Comment out if no cpu found automatically
+}
+
+disk "/" {
+        format = "<span background='#fec7cd'> 💿 %free Free </span>" # If several users then it doesn't exactly show your space left
+}
+
+disk "/home" {
+        format = "<span background='#a1d569'> 🏠%free Free </span>"
 }
 
 ethernet _first_ {
-        # if you use %speed, i3status requires root privileges
-        format_up = "E: %ip (%speed)"
-        format_down = "E: down"
+        format_up = "<span background='#88c0d0'> 🌐%ip (%speed) </span>"
+        format_down = "<span background='#88c0d0'> 🌐Disconnected </span>"
 }
 
-battery 0 {
-        format = "%status %percentage r:%remaining"
-        format_down = "No battery"
-        status_chr = "⚡ CHR"
-        status_bat = "BAT"
-        status_unk = "? UNK"
-        status_full = "☻ FULL"
-        path = "/sys/class/power_supply/BAT%d/uevent"
+wireless _first_ {
+        format_up = "<span background='#b48ead'> 📶 %essid </span>"
+        format_down = "<span background='#b48ead'> 📶 Disconnected </span>"
+}
+
+volume master {
+        format = "<span background='#ebcb8b'> 🎵%volume </span>"
+        format_muted = "<span background='#ebcb8b'> 🔇Muted </span>"
+        device = "default"
+        mixer = "Master"
+        mixer_idx = 0
+}
+
+battery all {
+	last_full_capacity = true
+        format = "<span background='#a3be8c'> 🔋%status %percentage </span>"
+        format_down = "No Battery"
+        status_chr = "🗲🗲"
+        status_bat = "Battery"
+        status_unk = "Unknown"
+        status_full = "Charged"
         low_threshold = 10
 }
 
 tztime local {
-        format = "%Y-%m-%d | %H:%M:%S"
-}
-
-load {
-        format = "%1min"
-}
-
-disk "/" {
-        format = "%avail"
+		format = "<span background='#81a1c1'> %time </span>"
+		format_time = "📅%a %-d %b %H:%M"
+                timezone = "Europe/Paris"
 }
